test/tests/stages/18_structures/invalid_types/invalid_struct_declaration/void_member.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[8]:
  struct
  identifier(s)
  {
  void
  identifier(x)
  ;
  }
  ;
